# warpgate-web/src/admin/lib/openapi-schema.json
@@ -4831,7 +4831,8 @@
           "blocked_at",
           "expires_at",
           "block_count",
-          "reason"
+          "reason",
+          "is_exempt"
         ],
         "properties": {
           "ip_address": {
@@ -4851,6 +4852,9 @@
           },
           "reason": {
             "type": "string"
+          },
+          "is_exempt": {
+            "type": "boolean"
           }
         }
       },
